Fix contrast

--- a/components/language-library-landing-search/language-library-landing-search.module.css
+++ b/components/language-library-landing-search/language-library-landing-search.module.css
@@ -32,7 +32,7 @@
   border: 0;
   border-radius: 1rem;
   padding: 0.5rem 1rem;
-  color: white;
+  color: black;
   /* font-weight: bold; */
 }
 
