--- a/components/language-library-search-form/language-library-search-form.module.css
+++ b/components/language-library-search-form/language-library-search-form.module.css
@@ -67,7 +67,7 @@
 .pillButton {
   background: #94c64e;
   border: 0;
-  color: white;
+  color: black;
   padding: 4px 12px;
   border-radius: 16px;
   display: flex;
